# Nemo-robot

./: README.md
hardware/motor_controller/: CMakeLists.txt  package.xml
hardware/motor_controller/config/: config.yaml
hardware/motor_controller/include/motor_controller/: motor_controller.hpp
hardware/motor_controller/launch/: motor_controller.launch.py
hardware/motor_controller/src/: motor_controller.cpp
lidar/slamware_ros2/include/slamware_ros2/: slamware_node.hpp
lidar/slamware_ros2/rviz/: rviz.rviz
lidar/slamware_ros2/src/: slamware_node.cpp
mapping/slam/: CMakeLists.txt  README.md  package.xml
mapping/slam/config/: mapper_params_online_async.yaml  nav2_params-office.yaml  nav2_params-original.yaml  nav2_params.yaml
mapping/slam/launch/: bringup_robot.launch.py  localization.launch.py  mapping.launch.py  navigation.launch.py  static_transform_publisher.launch.py
mapping/slam/maps/office/: map.pgm  map.yaml
mapping/slam/maps/office-v2/: office.data
mapping/slam/maps/office-v3/: map.pgm  map.posegraph  map.yaml
mapping/slam/maps/office-v4/: map.data  map.pgm  map.yaml
mapping/slam/maps/office-v5/: map.data  map.pgm  map.yaml
mapping/slam/maps/office-v5-1/: map.data  map.pgm  map.posegraph  map.yaml
mapping/slam/maps/office-v6/: map.data  map.pgm  map.yaml
mapping/slam/maps/office-v7/: map.data  map.pgm  map.yaml
mapping/slam/maps/uberfactory/: map.pgm  map.yaml
mapping/slam/maps/uberfactory-v2/: map.pgm  map.yaml
mapping/slam/maps/uberfactory-v3/: map.pgm  map.yaml
models/forward_kinematics/: CMakeLists.txt  package.xml
models/forward_kinematics/config/: config.yaml
models/forward_kinematics/include/forward_kinematics/: forward_kinematics.hpp
models/forward_kinematics/launch/: forward_kinematics.launch.py
models/forward_kinematics/src/: forward_kinematics.cpp
models/inverse_kinematics/: CMakeLists.txt  package.xml
models/inverse_kinematics/config/: config.yaml
models/inverse_kinematics/include/inverse_kinematics/: inverse_kinematics.hpp
models/inverse_kinematics/launch/: inverse_kinematics.launch.py
models/inverse_kinematics/src/: inverse_kinematics.cpp
nemo/articubot_one/: CMakeLists.txt
nemo/articubot_one/config/: ekf.yaml  laser_filter.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml
nemo/articubot_one/description/: lidar.xacro  robot_core.xacro  ros2_control.xacro
nemo/articubot_one/launch/: launch_robot.launch.py  scan_filter.launch.py
nemo/articubot_one/scripts/: barcode_reader.py  position_publisher.py
nemo/bno055/bno055/params/: bno055_params.yaml
nemo/diffdrive_arduino/include/diffdrive_arduino/: arduino_comms.h  config.h  wheel.h
nemo/diffdrive_arduino/src/: arduino_comms.cpp  diffdrive_arduino.cpp
slamware_sdk_ros2/slamware_ros2/include/slamware_ros2/: slamware_node.hpp
slamware_sdk_ros2/slamware_ros2/src/: slamware_node.cpp
test/: CMakeLists.txt  package.xml
test/scripts/: cmd_vel_publisher.py
